# pocketlint

./: .gitignore  .packit.yml  MANIFEST.in  Makefile  README  README.rst  pyproject.toml  python-pocketlint.spec  python3-pocketlint.spec  setup.py
.github/workflows/: validate.yml
pocketlint/: __init__.py  pangocheck.py  translatepo.py  util.py
pocketlint/checkers/: eintr.py  environ.py  intl.py  markup.py  pointless-override.py  preconf.py
tests/pylint/: runpylint.py
